--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "npm run seed && nodemon server/index.js",
+    "start": "nodemon server/index.js",
     "seed": "node db/seed.js"
   },
   "dependencies": {
