--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "newrelic": "^7.0.2",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "fast-csv": "^4.3.5",
+    "fast-csv": "^4.3.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
